--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gray-matter": "^4.0.3",
     "next": "13.1.2",
     "next-sitemap": "^3.1.49",
+    "next-themes": "^0.2.1",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
