--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "gray-matter": "^4.0.3",
-    "next": "^13.1.2",
+    "next": "^13.2.4",
     "next-sitemap": "^3.1.49",
     "next-themes": "^0.2.1",
-    "nprogress": "^0.2.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "sharp": "^0.31.3",
     "typescript": "4.9.4"
   },
