--- a/package.json
+++ b/package.json
@@ -10,17 +10,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mdx-js/loader": "^2.2.1",
-    "@mdx-js/react": "^2.2.1",
-    "@next/mdx": "^13.1.5",
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.5.6",
+    "@types/mdx": "^2.0.9",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
     "classnames": "^2.3.2",
     "eslint": "8.32.0",
-    "eslint-config-next": "13.1.2",
     "gray-matter": "^4.0.3",
-    "next": "^13.2.4",
+    "next": "^14.0.1",
     "next-sitemap": "^3.1.49",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
@@ -29,10 +29,11 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@svgr/webpack": "^6.5.1",
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/typography": "^0.5.9",
     "autoprefixer": "^10.4.13",
-    "next-mdx-remote": "^4.3.0",
+    "eslint-config-next": "^14.0.1",
+    "next-mdx-remote": "^4.4.1",
     "postcss": "^8.4.21",
     "sass": "^1.57.1",
     "tailwindcss": "^3.2.4"
