--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
+    "@vercel/analytics": "^1.1.1",
     "classnames": "^2.3.2",
     "eslint": "8.32.0",
     "gray-matter": "^4.0.3",
